Replace trivial streams in Town & mark as unmodifiable